--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,10 @@ inputs:
   GITHUB_TOKEN:
     description: 'GitHub token'
     required: true
+buildArgs:
+    description: 'Json object'
+    required: false
+    default: "{}"    
 
 runs:
   using: 'node12'
