--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,10 @@ buildArgs:
     description: 'Json object'
     required: false
     default: "{}"    
+testArgs:
+    description: 'Json object'
+    required: false
+    default: "{}"    
 
 runs:
   using: 'node12'
