--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,9 @@ inputs:
     description: 'Json object'
     required: false
     default: "{}"    
+env:
+  mulesoft_nexus_user:
+    required: false  
 
 runs:
   using: 'node12'
